# chrome-pwd-dumper-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md
src/: args.rs  decryption_core.rs  dumper.rs  main.rs  models.rs
