[package]
name = "chrome-pwd-dumper"
version = "0.2.0"
authors = ["Budi Syahiddin <budisyahiddin@gmail.com>"]
edition = "2018"

[dependencies]
app_dirs = "1.2.1"
clap = "2"
rayon = "1.1"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
rusqlite = { version = "0.18.0", features = ["bundled"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["dpapi"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true


