[package]
name = "chrome-pwd-dumper"
version = "0.4.0"
authors = ["Budi Syahiddin <me@inve.rs>"]
edition = "2018"

[dependencies]
app_dirs = { git = "https://github.com/BudiNverse/app-dirs-rs.git" }
rusqlite = { version = "0.23.1", features = ["bundled"]}
aes-gcm = "0.6.0"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
base64 = "0.12.3"
lazy_static = "1.4.0"
argh = "0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["dpapi", "errhandlingapi"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
